--- a/src/Pokemon.css
+++ b/src/Pokemon.css
@@ -6,9 +6,16 @@
     padding: 20px;
     width: 200px;
     height: 300px;
-    background-color: white;
+    /*background-color: white;*/
     z-index: 1;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
+    background-color: #ffffff;
+    border-radius: 27px;
+    box-shadow:
+            12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+            -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    /*box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),*/
+    /*inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);*/
 }
 
 .pokemon_power {
