--- a/src/PokemonDetails.css
+++ b/src/PokemonDetails.css
@@ -9,12 +9,16 @@
 .pokemon_oneCard {
     display: flex;
     flex-direction: column;
-    border: 3px solid black;
+    /*border: 3px solid black;*/
     margin: 5px;
-    padding: 10px;
+    padding: 20px;
     align-items: center;
     justify-content: center;
     position: sticky;
+    background-color: #c17b7b;
+    border-radius: 27px;
+    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
 
 }
 
@@ -22,8 +26,26 @@
     border-collapse: collapse;
 }
 
-.pokemon_oneCard > table, th, td {
-    border: 1px solid black;
+.pokemon_oneCard > table {
+    table-layout: fixed;
+}
+
+.pokemon_oneCard > th {
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #fff;
+}
+
+.pokemon_oneCard > td {
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 12px;
+    color: #fff;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
 }
 
 .pokemon_oneCard > img {
