--- a/src/Header.css
+++ b/src/Header.css
@@ -4,12 +4,17 @@
     align-items: center;
     top: 0;
     justify-content: center;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .header_logo {
-    height: 60px;
+    height: 70px;
     width: 40%;
     text-align: center;
-    border: 2px solid lightgrey;
+    /*border: 2px solid lightgrey;*/
+    background-color: #ffffff;
+    border-radius: 27px;
+    box-shadow:
+            12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+            -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
 }
