--- a/src/Home.css
+++ b/src/Home.css
@@ -18,12 +18,29 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 60%;
     margin-left: 15px;
 }
+
 .home_right {
     display: flex;
     flex-direction: column;
     width: 40%;
     padding: auto;
+}
+
+
+.home_button {
+    outline: 0 !important;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    margin-top: 20px;
+    width: 80%;
+    height: 60px;
+    background-color: #ffffff;
+    border-radius: 27px;
+    box-shadow:
+            12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+            -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
 }
