--- a/src/Pokemon.css
+++ b/src/Pokemon.css
@@ -14,8 +14,6 @@
     box-shadow:
             12px 12px 16px 0 rgba(0, 0, 0, 0.25),
             -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
-    /*box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),*/
-    /*inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);*/
 }
 
 .pokemon_power {
@@ -47,4 +45,5 @@
     /*object-fit: contain;*/
     margin-bottom: 5px;
     align-items: center;
+    margin-top: 35px;
 }
