--- a/src/PokemonDetails.css
+++ b/src/PokemonDetails.css
@@ -7,18 +7,22 @@
     top: 15%;
 }
 .pokemon_oneCard {
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: 500;
     display: flex;
     flex-direction: column;
     /*border: 3px solid black;*/
-    margin: 5px;
+    margin: auto;
     padding: 20px;
     align-items: center;
     justify-content: center;
     position: sticky;
-    background-color: #c17b7b;
+    background-color: #ffffff;
     border-radius: 27px;
-    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
-    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+    box-shadow:
+            12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+            -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
 
 }
 
@@ -26,27 +30,6 @@
     border-collapse: collapse;
 }
 
-.pokemon_oneCard > table {
-    table-layout: fixed;
-}
-
-.pokemon_oneCard > th {
-    padding: 20px 15px;
-    text-align: left;
-    font-weight: 500;
-    font-size: 12px;
-    color: #fff;
-}
-
-.pokemon_oneCard > td {
-    padding: 15px;
-    text-align: left;
-    vertical-align:middle;
-    font-weight: 300;
-    font-size: 12px;
-    color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-}
 
 .pokemon_oneCard > img {
     max-height: 200px;
